# mono-repo

./: .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  .tflint.hcl  .tool-versions  BUILD  BUILD_MACROS.py  LICENSE  README.md  dev_env.yml  pants.toml  pyproject.toml
.github/: BUILD  ci.Dockerfile
.github/workflows/: build-ci-image.yml  python-ci.yml  terraform-ci.yml  test-library.yml  validate-modules.yml
ditty-bag/: README.md  install-dev-tools.sh
docs/: agents-notes.md  dev.md  index.md  sad.md  usage.md
infra-packages/aws/: README.md
infra-packages/aws/batch_metaflow/: README.md  main.tf  outputs.tf  versions.tf
infra-packages/aws/docs/: deps.md  module-layout.md  sad.md
infra-packages/aws/ecr_unop/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra-packages/aws/iam_metaflow/: main.tf  outputs.tf  variables.tf  versions.tf
infra-packages/aws/s3_metaflow/: README.md  variables.tf  versions.tf
infra-packages/aws/security_groups_unop/: README.md  outputs.tf  variables.tf  versions.tf
infra-packages/aws/unop:batch/: outputs.tf
project_template/{{ cookiecutter.project_slug }}/: README.md
services/qwen_ft/: README.md
templates/new-project/: cookiecutter.json
templates/new-project/{{ cookiecutter.project_slug }}/: pyproject.toml
templates/new-project/{{ cookiecutter.project_slug }}/tests/: test_dummy.py
templates/template-infra/: README.md  cookiecutter.json
templates/template-project/: README.md  cookiecutter.json
tests/: BUILD  test_dummy.py
tests/services/: BUILD  test_dummy.py
tools/: BUILD
(+58 files in other folders)
