[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4
target-version = "py310"

# Exclude a variety of commonly ignored directories and the temporary
# file created by the setup-miniconda action.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "setup-miniconda-patched-*.yml", # Ignore conda temp files
    ".mypy_cache",
    ".pytest_cache",
    "docs",
    "notebooks",
    "sdist",
    "wheel",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
